# semi-static-conditions

./: CMakeLists.txt  LICENSE  README.md  benchmark.cpp  benchmarkBranch.cpp  branch.h  main  main.cpp  makefile  switch.hpp  usage.cpp
.github/workflows/: cmake-multi-platform.yml
bechmark_suite/: bench_hft.cpp  benchmark_branch.cpp  benchmark_branchless.cpp  branch.h  main  makefile
bechmark_suite/hft/: bench_exchange.cpp  bench_hybrid.cpp  bench_order_routing.cpp  bench_pricing.cpp  bench_switch_pricing.cpp  dummy_exchange.h  main  makefile  option_pricing.h
bechmark_suite/preliminary/: benchmark.cpp  benchmark_branch.cpp  benchmark_branchless.cpp  benchmark_switch.cpp  main  makefile
benchmarks/archive/hft/: bench_exchange.cpp  bench_pricing.cpp  bench_single.cpp  main  option_pricing.h
benchmarks/archive/preliminary/: benchmark_branch.cpp  benchmark_branchless.cpp  benchmark_random.cpp  benchmark_switch.cpp  main  makefile
benchmarks/hft/: bench_pricing.cpp  main  makefile  mispredict.cpp
benchmarks/preliminary/: bench_thread.cpp  main  makefile
benchmarks/utilities/: option_pricing.hpp  utilities.hpp
include/: branch.h  branch.hpp  platform.h  utilities.h
include/builds/: branch_arch.hpp  branch_base.hpp  branch_clang.hpp  branch_gcc.hpp  branch_misc.hpp  branch_msvc.hpp  branch_utilities.hpp
src/: branch.h  branch.hpp  branch_misc.cpp  branch_utilities.cpp  branch_utils.cpp  branch_utils.hpp  compiler_utils.hpp  os_utils.hpp  platform.hpp  switch.hpp  templates.hpp  utilities.cpp  utilities.hpp
tests/: CMakeLists.txt  branch_test.cpp
